--- a/index.html
+++ b/index.html
@@ -42,42 +42,42 @@
       <div class="tab-pane container fade text-center" id="menu1">
         <br> 
         <h6>Past</h6>
-        <img src="wash1.jpg" class="img-fluid img-thumbnail" alt="manual washing" title="Past">
+        <img src="wash1.jpg" class="img-fluid img-thumbnail" height="40%" width="40%" alt="manual washing" title="Past">
         <br><br>
         <h6>Present</h6>
-        <img src="wash2.jpg" class="img-fluid img-thumbnail" alt="washing machine" title="Present">
+        <img src="wash2.jpg" class="img-fluid img-thumbnail" height="40%" width="40%" alt="washing machine" title="Present">
       </div>
       <div class="tab-pane container fade text-center" id="menu2">
         <br>
         <h6>Past</h6>
-        <img src="grind1.jpg" class="img-fluid img-thumbnail" alt="manual grinding" title="Past">
+        <img src="grind1.jpg" class="img-fluid img-thumbnail" height="40%" width="40%" alt="manual grinding" title="Past">
         <br><br>
         <h6>Present</h6>
-        <img src="grind2.jpg" class="img-fluid img-thumbnail" alt="mixer-grinder" title="Present">
+        <img src="grind2.jpg" class="img-fluid img-thumbnail" height="40%" width="40%" alt="mixer-grinder" title="Present">
       </div>
       <div class="tab-pane container fade text-center" id="menu3">
         <br> 
         <h6>Past</h6>
-        <img src="cook1.jpg" class="img-fluid img-thumbnail" alt="wood-charcoal stove" title="Past">
+        <img src="cook1.jpg" class="img-fluid img-thumbnail" height="40%" width="40%" alt="wood-charcoal stove" title="Past">
         <br><br>
         <h6>Present</h6>
-        <img src="cook2.jpg" class="img-fluid img-thumbnail" alt="modern stove" title="Present">
+        <img src="cook2.jpg" class="img-fluid img-thumbnail" height="40%" width="40%" alt="modern stove" title="Present">
       </div>
       <div class="tab-pane container fade text-center" id="menu4">
         <br> 
         <h6>Past</h6>
-        <img src="butter1.jpg" class="img-fluid img-thumbnail" alt="olden days" title="Past">
+        <img src="butter1.jpg" class="img-fluid img-thumbnail" height="40%" width="40%" alt="olden days" title="Past">
         <br><br>
         <h6>Present</h6>
-        <img src="butter2.jpg" class="img-fluid img-thumbnail" alt="modern days" title="Present">
+        <img src="butter2.jpg" class="img-fluid img-thumbnail" height="40%" width="40%" alt="modern days" title="Present">
       </div>
       <div class="tab-pane container fade text-center" id="menu5">
         <br>
         <h6>Past</h6>
-        <img src="water1.jpg" class="img-fluid img-thumbnail" alt="wells" title="Past">
+        <img src="water1.jpg" class="img-fluid img-thumbnail" height="40%" width="40%" alt="wells" title="Past">
         <br><br>
         <h6>Present</h6>
-        <img src="water2.jpg" class="img-fluid img-thumbnail" alt="borewells" title="Present">
+        <img src="water2.jpg" class="img-fluid img-thumbnail" height="40%" width="40%" alt="borewells" title="Present">
       </div>
     </div>
   </body>
